--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "tauri2-svelte5-shadcn",
+	"name": "openstage",
 	"private": true,
-	"version": "2.0.0",
-	"description": "A simple desktop application template combining Tauri 2 with Svelte 5 and shadcn-svelte with a basic ci/cd implemented.",
+	"version": "1.0.0",
+	"description": "OpenStage",
 	"author": {
-		"name": "Alysonhower Veras Vieira",
-		"email": "contato@alysonhower.dev"
+		"name": "Eero Gallano",
+		"email": "gallanoeer@gmail.com"
 	},
 	"type": "module",
 	"scripts": {
