Strip down to barebones

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
 		}
 	],
 	"compilerOptions": {
+		"baseUrl": ".",
 		"paths": {
-			"$lib": ["./src/lib"],
-			"$lib/*": ["./src/lib/*"]
-		}
+		  "@/*": ["./src/*"]
+		},
+		"composite": true
 	}
 }
