--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,8 +3,7 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"$lib": ["./src/lib"],
-			"$lib/*": ["./src/lib/*"]
+			"@/*": ["./src/*"]
 		},
 		"target": "ESNext",
 		"useDefineForClassFields": true,
@@ -13,7 +12,8 @@
 		"allowJs": true,
 		"checkJs": true,
 		"isolatedModules": true,
-		"moduleDetection": "force"
+		"moduleDetection": "force",
+		"composite": true
 	},
 	"include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
