--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"vite": "^7.0.5"
 	},
 	"dependencies": {
+		"@anthropic-ai/sdk": "^0.56.0",
 		"@tailwindcss/vite": "^4.1.11",
 		"@tauri-apps/api": "^2.6.0",
 		"@types/node": "^24.0.15",
