--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-		  "@/*": ["./src/*"]
+		  "@/*": ["./src/lib/*"]
 		},
 		"composite": true
-	}
+	},
+	"exclude": ["node_modules", "dist"]
 }
