--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.3.1",
-		"@lucide/svelte": "^0.525.0",
+		"@internationalized/date": "^3.8.2",
+		"@lucide/svelte": "^0.515.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tauri-apps/cli": "^2.6.2",
 		"@tsconfig/svelte": "^5.0.4",
+		"bits-ui": "^2.8.11",
 		"eslint": "^9.31.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
