Upgrade shadcn-svelte

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/lib/*"]
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"]
 		},
 		"target": "ESNext",
 		"useDefineForClassFields": true,
