--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
-		  "@/*": ["./src/lib/*"]
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"]
 		},
 		"composite": true
 	},
