--- a/components.json
+++ b/components.json
@@ -2,14 +2,15 @@
 	"$schema": "https://shadcn-svelte.com/schema.json",
 	"tailwind": {
 		"css": "src/app.css",
-		"baseColor": "neutral"
+		"baseColor": "neutral",
+		"cssVariables": true
 	},
 	"aliases": {
-		"components": "@/components",
-		"utils": "@/components/utils",
-		"ui": "@/components/common",
-		"hooks": "@/components/hooks",
-		"lib": "@"
+		"components": "$lib/components",
+		"utils": "$lib/utils",
+		"ui": "$lib/components/ui",
+		"hooks": "$lib/hooks",
+		"lib": "$lib"
 	},
 	"typescript": true,
 	"registry": "https://shadcn-svelte.com/registry"
