--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@chromatic-com/storybook": "^4.1.1",
     "@eslint/compat": "^1.3.1",
     "@internationalized/date": "^3.8.2",
-    "@lucide/svelte": "^0.515.0",
+    "@lucide/svelte": "^0.545.0",
     "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-svelte-csf": "^5.0.10",
@@ -32,26 +32,26 @@
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tauri-apps/cli": "^2.6.2",
     "@tsconfig/svelte": "^5.0.4",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "bits-ui": "^2.8.11",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-storybook": "^9.1.10",
     "eslint-plugin-svelte": "^3.11.0",
+    "playwright": "^1.56.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.1.10",
     "svelte": "^5.36.8",
     "svelte-check": "^4.3.0",
-    "tailwind-variants": "^1.0.0",
-    "tw-animate-css": "^1.3.5",
+    "tailwind-variants": "^3.1.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.37.0",
     "vite": "^7.0.5",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.56.0",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
@@ -59,6 +59,7 @@
     "@tauri-apps/api": "^2.6.0",
     "@types/node": "^24.0.15",
     "clsx": "^2.1.1",
+    "node-watcher": "^0.0.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   }
