--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@tauri-apps/api": "^2.6.0",
     "@types/node": "^24.0.15",
     "clsx": "^2.1.1",
+    "mode-watcher": "^1.1.0",
     "node-watcher": "^0.0.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
