--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-svelte-csf": "^5.0.10",
+    "@storybook/addon-themes": "^9.1.12",
     "@storybook/addon-vitest": "^9.1.10",
     "@storybook/svelte-vite": "^9.1.10",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
